Changed back to logo in database, no more opinions on what the logo format is from Dennys. Added UNSET_PATCH_FIELD string constant for nullable optional PatchFields in the API layer. Pretty neat!
