# src/main/kotlin/com/lowbudgetlcs/api/dto/teams/NewTeamDto.kt
@@ -6,4 +6,5 @@ import kotlinx.serialization.Serializable
 data class NewTeamDto(
     val name: String,
     val eventId: Int? = null,
+    val logo: String? = null,
 )
