# src/main/kotlin/com/lowbudgetlcs/api/dto/teams/PatchTeamDto.kt
@@ -1,8 +1,10 @@
 package com.lowbudgetlcs.api.dto.teams
 
+import com.lowbudgetlcs.api.dto.UNSET_PATCH_FIELD
 import kotlinx.serialization.Serializable
 
 @Serializable
 data class PatchTeamDto(
     val name: String? = null,
+    val logo: String? = UNSET_PATCH_FIELD
 )
