# src/main/kotlin/com/lowbudgetlcs/api/dto/teams/TeamDto.kt
@@ -6,6 +6,6 @@ import kotlinx.serialization.Serializable
 data class TeamDto(
     val id: Int,
     val name: String,
-    val logo: String,
+    val logo: String? = null,
     val eventId: Int?,
 )
